# api-tarpeydev

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
alembic/: env.py
alembic/versions/: 4a66501428ef_add_users_table.py  9426923edc92_initial_state.py
src/: gunicorn_config.py  main.py
src/api/: apikey.py  autobracket.py  haveyouseenx.py  index.py  mildredleague.py  security.py  users.py
src/db/: README.md  alchemy.py  db.sqlite  kenpom_2021.csv  matchup_results_2021.csv  matchup_table_2021.csv  models.py  orm_models.py  sqlite.py  startup.py
src/db/march_madness/: README.md  kenpom_2021.csv  school_names.csv
src/db/mongo_backup/: autobracket_cbb_team.csv  autobracket_player_season.csv  autobracket_simulated_bracket.csv  autobracket_simulation_dist.csv  backlogs_annuitydew.csv  backlogs_backlog_game.csv  mildredleague_ml_boxplot_transform.csv  mildredleague_ml_game.csv  mildredleague_ml_note.csv  mildredleague_ml_team.csv  quotes_quote.csv
src/db/mongo_backup_transforms/: mildredleague_ml_table_transform.csv
src/utils/: autobracket_queue.py  init_db.py  mongo_csv_to_sqlalchemy.py  mongo_csv_to_sqlite.py  mongo_download_to_csv.py
static/index/css/: style.css
templates/: api-portal.html
