[tool.poetry]
name = "api-tarpeydev"
version = "0.1.0"
description = "API for Mike Tarpey's app sandbox at tarpey.dev"
authors = ["Mike Tarpey <mike@tarpey.dev>"]
license = "MIT"
packages = [
    { include = "api", from = "src" },
    { include = "db", from = "src" },
    { include = "utils", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
fastapi-login = "^1.6.0"
numpy = "^1.20.3"
pandas = "^1.2.4"
scikit-learn = "^0.24.2"
plotly = "^4.14.3"
httpx = "^0.18.1"
okta-jwt = "^1.3.5"
orjson = "^3.5.2"
gunicorn = "^20.1.0"
uvicorn = "^0.13.4"
aiofiles = "^0.7.0"
Jinja2 = "^3.0.1"
uvloop = "^0.15.2"
httptools = "^0.2.0"
dnspython = "^2.1.0"
SQLAlchemy = "^1.4.15"
python-dotenv = "^0.17.1"
psycopg2-binary = "^2.8.6"
alembic = "^1.6.4"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^20.8b1"
google-cloud-tasks = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
